Add pages and login form Project Page

--- a/Week3/src/main/resources/text_en.properties
+++ b/Week3/src/main/resources/text_en.properties
@@ -1,3 +1,12 @@
-login.label.username=Usr
-login.label.password=Pass
-login.button.submit=Log
+login.label.username=Utilizator
+login.label.password=Parola
+login.button.submit=Authentifica
+input.label.key=Cheie
+input.label.value=Valoare
+input.button.submit=Insereaza
+input.select.default=Alege optiunea
+words.table.head1=Categorie
+words.table.head2=Cheie   
+words.table.head3=Valoare
+login.label.remember=Adu-ti aminte
+query1.search.button=Cauta
