--- a/Week3/src/main/resources/text_ro.properties
+++ b/Week3/src/main/resources/text_ro.properties
@@ -1,3 +1,12 @@
-login.label.username= Utilizator
-login.label.password= Parola
-login.button.submit=Authentifica
+login.label.username=Username
+login.label.password=Password
+login.button.submit=Login
+input.label.key=Key
+input.label.value=Value
+input.button.submit=Add
+input.select.default=Choose your option
+words.table.head1=Category
+words.table.head2=Key
+words.table.head3=Value
+login.label.remember=Remember Me
+query1.search.button=Search
